<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Storage App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="vault_items">Vault Items</string>
    <string name="no_vault_items">No vault items</string>
    <string name="action_add_item">Add item</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="age">Age</string>
    <string name="height">Height (inches)</string>
    <string name="nicknames">Nicknames</string>
    <string name="save">Save</string>
    <string name="vault_item_created">Vault item created</string>
    <string name="vault_item_updated">Vault item updated</string>
    <string name="age_years_old">%1$s years old</string>
    <string name="height_inches">%1$s inches tall</string>
    <string name="edit_vault_item">Edit Vault Item</string>
    <string name="name_required">Name is required</string>
    <string name="title_required">Title is required</string>
    <string name="confirm_delete_title">Delete vault item</string>
    <string name="confirm_delete_message">Are you sure you want to delete this vault item?</string>
    <string name="vault_item_deleted">Vault item deleted</string>
    <string name="search_hint">Name (case-sensitive)</string>
    <string name="search_for_title">Search for \"%1$s\"</string>
    <string name="about_text">This sample application uses ContextHub to create, retrieve, update and delete vault items on the server. ContextHub allows you to quickly save information that can be accessed in both your apps and context rules without needing additional servers.</string>
    <string name="copyright_info">Copyright © 2014 ChaiOne\nAll Rights Reserved</string>
    <string name="version_info">Version %1$s (%2$s)</string>
    <string name="about">About</string>
    <string name="contexthub_url">http://contexthub.com</string>
    <string name="saving_vault_item">Saving vault item...</string>
    <string name="loading_vault_items">Loading vault items...</string>
    <string name="deleting_vault_item">Deleting vault item...</string>
</resources>
