<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/title"/>

        <TextView
            android:id="@+id/age_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/title"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:padding="5dp"
            android:text="@string/age"/>

        <SeekBar
            android:id="@+id/age_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_toRightOf="@+id/height_label"
            android:layout_toLeftOf="@+id/age_value"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/age_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/title"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:padding="5dp"
            android:text="0"/>

        <TextView
            android:id="@+id/height_label"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/age_seekbar"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:padding="5dp"
            android:text="@string/height"/>

        <SeekBar
            android:id="@+id/height_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age_seekbar"
            android:layout_toRightOf="@+id/height_label"
            android:layout_toLeftOf="@+id/height_value"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/height_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/age_seekbar"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:padding="5dp"
            android:text="0"/>

        <EditText
            android:id="@+id/nicknames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/height_seekbar"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/nicknames"/>

    </RelativeLayout>

</ScrollView>